Tweak home page grid format.

--- a/SSD-Alkolq/Pages/Index.cshtml
+++ b/SSD-Alkolq/Pages/Index.cshtml
@@ -28,7 +28,7 @@
         <div></div>
         <section id="types">
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <a asp-page="./AlcoholTypes/Beer">
                         <div class="types-container">
                             <img src="~/images/beer.jpg" alt="beer" class="image">
@@ -39,7 +39,7 @@
                     </a>
                 </div>
                 <br />
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <a asp-page="./AlcoholTypes/RedWine">
                         <div class="types-container">
                             <img src="~/images/red-wine.jpg" alt="red wine" class="image">
@@ -50,7 +50,7 @@
                     </a>
                 </div>
                 <br />
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <a asp-page="./AlcoholTypes/WhiteWine">
                         <div class="types-container">
                             <img src="~/images/white-wine.jpg" alt="white wine" class="image">
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <a asp-page="./AlcoholTypes/Whisky">
                         <div class="types-container">
                             <img src="~/images/whisky.jpg" alt="whisky" class="image">
@@ -73,7 +73,7 @@
                     </a>
                 </div>
                 <br />
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <a asp-page="./AlcoholTypes/Vodka">
                         <div class="types-container">
                             <img src="~/images/vodka.jpg" alt="vodka" class="image">
@@ -84,7 +84,7 @@
                     </a>
                 </div>
                 <br />
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <a asp-page="./AlcoholTypes/Brandy">
                         <div class="types-container">
                             <img src="~/images/brandy.jpg" alt="brandy" class="image">
@@ -96,7 +96,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <a asp-page="./AlcoholTypes/Tequila">
                         <div class="types-container">
                             <img src="~/images/tequila.jpg" alt="tequila" class="image">
@@ -107,7 +107,7 @@
                     </a>
                 </div>
                 <br />
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <a asp-page="./AlcoholTypes/Gin">
                         <div class="types-container">
                             <img src="~/images/gin.jpg" alt="gin" class="image">
@@ -118,7 +118,7 @@
                     </a>
                 </div>
                 <br />
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <a asp-page="./AlcoholTypes/Rum">
                         <div class="types-container">
                             <img src="~/images/rum.jpg" alt="rum" class="image">
