Update payment success message.

--- a/SSD-Alkolq/Pages/Payment/Success.cshtml
+++ b/SSD-Alkolq/Pages/Payment/Success.cshtml
@@ -6,4 +6,4 @@
 }
 
 <h1>Success</h1>
-<h2>Thanks for your order, @Model.Customer.Name!</h2>
+<h2>Thanks for your order, @Model.Customer.Name. Your shipment will be processed shortly!</h2>
