--- a/SSD-Alkolq/Pages/Feedback/Create.cshtml
+++ b/SSD-Alkolq/Pages/Feedback/Create.cshtml
@@ -15,12 +15,17 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="FeedbackRecord.FeedbackType" class="control-label"></label>
-                <input asp-for="FeedbackRecord.FeedbackType" class="form-control" />
+                <select asp-for="FeedbackRecord.FeedbackType" class="form-control">
+                    <option value="Website Bugs">Website Bugs</option>
+                    <option value="Suggestions for Improvements">Suggestions for Improvements</option>
+                    <option value="Additional Feature Request">Additional Feature Request</option>
+                    <option value="Others">Others</option>
+                </select>
                 <span asp-validation-for="FeedbackRecord.FeedbackType" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FeedbackRecord.FeedbackContent" class="control-label"></label>
-                <input asp-for="FeedbackRecord.FeedbackContent" class="form-control" />
+                <textarea asp-for="FeedbackRecord.FeedbackContent" class="form-control" rows="10" cols="30" required></textarea>
                 <span asp-validation-for="FeedbackRecord.FeedbackContent" class="text-danger"></span>
             </div>
             <div class="form-group">
