--- a/SSD-Alkolq/Pages/Index.cshtml
+++ b/SSD-Alkolq/Pages/Index.cshtml
@@ -15,120 +15,32 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;1,400&family=Yeseva+One&display=swap" rel="stylesheet">
 </head>
 
-<body>
-    <div class="content-wrap">
-        <section id="=header">
-            <div class="row">
-                <div class="col-sm-12">
-                    <h1 class="alkolq-header">Alkolq</h1>
-                    <h2 class="sub-header">Every drop counts, when there is a story in every bottle.</h2>
-                </div>
+
+<div class="content-wrap">
+    <section id="=header">
+        <div class="row">
+            <div class="col-sm-12">
+                <h1 class="alkolq-header">Alkolq</h1>
+                <h2 class="sub-header">Every drop counts, when there is a story in every bottle.</h2>
             </div>
-        </section>
-        <div></div>
-        <section id="types">
-            <div class="row">
+        </div>
+    </section>
+    <div></div>
+    <section id="types">
+        <div class="row">
+            @foreach (var type in Model.ProductTypes)
+            {
                 <div class="col-md-4">
-                    <a asp-page="./AlcoholTypes/Beer">
+                    <a asp-page="/AlcoholProducts/Types" asp-route-typeName="@type.Name">
                         <div class="types-container">
-                            <img src="~/images/beer.jpg" alt="beer" class="image">
+                            <img src="~/images/@type.ImageName" alt="beer" class="image">
                             <div class="overlay">
-                                <div class="text-type">Beer</div>
+                                <div class="text-type">@type.Name</div>
                             </div>
                         </div>
                     </a>
                 </div>
-                <br />
-                <div class="col-md-4">
-                    <a asp-page="./AlcoholTypes/RedWine">
-                        <div class="types-container">
-                            <img src="~/images/red-wine.jpg" alt="red wine" class="image">
-                            <div class="overlay">
-                                <div class="text-type">Red Wine</div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <br />
-                <div class="col-md-4">
-                    <a asp-page="./AlcoholTypes/WhiteWine">
-                        <div class="types-container">
-                            <img src="~/images/white-wine.jpg" alt="white wine" class="image">
-                            <div class="overlay">
-                                <div class="text-type">White Wine</div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <a asp-page="./AlcoholTypes/Whisky">
-                        <div class="types-container">
-                            <img src="~/images/whisky.jpg" alt="whisky" class="image">
-                            <div class="overlay">
-                                <div class="text-type">Whisky</div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <br />
-                <div class="col-md-4">
-                    <a asp-page="./AlcoholTypes/Vodka">
-                        <div class="types-container">
-                            <img src="~/images/vodka.jpg" alt="vodka" class="image">
-                            <div class="overlay">
-                                <div class="text-type">Vodka</div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <br />
-                <div class="col-md-4">
-                    <a asp-page="./AlcoholTypes/Brandy">
-                        <div class="types-container">
-                            <img src="~/images/brandy.jpg" alt="brandy" class="image">
-                            <div class="overlay">
-                                <div class="text-type">Brandy</div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <a asp-page="./AlcoholTypes/Tequila">
-                        <div class="types-container">
-                            <img src="~/images/tequila.jpg" alt="tequila" class="image">
-                            <div class="overlay">
-                                <div class="text-type">Tequila</div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <br />
-                <div class="col-md-4">
-                    <a asp-page="./AlcoholTypes/Gin">
-                        <div class="types-container">
-                            <img src="~/images/gin.jpg" alt="gin" class="image">
-                            <div class="overlay">
-                                <div class="text-type">Gin</div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <br />
-                <div class="col-md-4">
-                    <a asp-page="./AlcoholTypes/Rum">
-                        <div class="types-container">
-                            <img src="~/images/rum.jpg" alt="rum" class="image">
-                            <div class="overlay">
-                                <div class="text-type">Rum</div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </section>
-    </div>
-</body>
+            }
+        </div>
+    </section>
+</div>
