--- a/SSD-Alkolq/Pages/Feedback/Create.cshtml
+++ b/SSD-Alkolq/Pages/Feedback/Create.cshtml
@@ -29,14 +29,14 @@
                 <span asp-validation-for="FeedbackRecord.FeedbackContent" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" asp-page="/Identity/Account/Manage" />
+                <input type="submit" value="Create" class="btn btn-primary" asp-area="Identity" asp-page="/Account/Manage/Index"/>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a class="nav-link" asp-page="../../Identity/Account/Manage">Back</a>
+    <a class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index">Back</a>
 </div>
 
 @section Scripts {
