--- a/SSD-Alkolq/wwwroot/css/site.css
+++ b/SSD-Alkolq/wwwroot/css/site.css
@@ -85,3 +85,9 @@ h1 {
 h4 {
     font-family: 'Anaheim', sans-serif;
 }
+
+td {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    and white-space: nowrap;
+}
