--- a/SSD-Alkolq/Pages/Feedback/Create.cshtml
+++ b/SSD-Alkolq/Pages/Feedback/Create.cshtml
@@ -29,7 +29,7 @@
                 <span asp-validation-for="FeedbackRecord.FeedbackContent" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" asp-area="Identity" asp-page="/Account/Manage/Index"/>
+                <input type="submit" value="Submit" class="btn btn-primary"/>
             </div>
         </form>
     </div>
