--- a/SSD-Alkolq/Areas/Identity/Pages/Account/Manage/PaymentHistory.cshtml
+++ b/SSD-Alkolq/Areas/Identity/Pages/Account/Manage/PaymentHistory.cshtml
@@ -7,7 +7,7 @@
 
 <h4>@ViewData["Title"]</h4>
 
-<table class="table">
+<table class="table table-responsive">
     <thead>
         <tr>
             <th>
