Changed Feedback to have separate page in Account/Manage

--- a/SSD-Alkolq/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/SSD-Alkolq/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -13,5 +13,5 @@
     }
     <li class="nav-item"><a class="nav-link @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)" id="two-factor" asp-page="./TwoFactorAuthentication">Two-factor authentication</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal data</a></li>
-    <li class="nav-item"><a class="nav-link" asp-page="/Feedback/Create">Website Feedback</a></li>
+    <li class="nav-item"><a class="nav-link @ManageNavPages.WebsiteFeedbackClass(ViewContext)" id="website-feddback" asp-page="./WebsiteFeedback">WebsiteFeedback</a></li>
 </ul>
