--- a/SSD-Alkolq/Areas/Identity/Pages/Account/Manage/WebsiteFeedback.cshtml
+++ b/SSD-Alkolq/Areas/Identity/Pages/Account/Manage/WebsiteFeedback.cshtml
@@ -1,18 +1,14 @@
 ﻿@page
-@model SSD_Alkolq.Areas.Identity.Pages.Account.Manage.WebsiteFeedbackModel
-
+@model WebsiteFeedbackModel
 @{
-    ViewData["Title"] = "WebsiteFeedback";
+    ViewData["Title"] = "Website Feedback";
     ViewData["ActivePage"] = ManageNavPages.WebsiteFeedback;
-
 }
 
-<h1>WebsiteFeedback</h1>
+<h4>@ViewData["Title"]</h4>
 
-<h4>FeedbackRecord</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
