--- a/SSD-Alkolq/Areas/Identity/Pages/Account/Manage/WebsiteFeedback.cshtml
+++ b/SSD-Alkolq/Areas/Identity/Pages/Account/Manage/WebsiteFeedback.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h4>@ViewData["Title"]</h4>
-
+<partial name="_StatusMessage" model="Model.StatusMessage" />
 <div class="row">
     <div class="col-md-8">
         <form method="post">
@@ -14,6 +14,7 @@
             <div class="form-group">
                 <label asp-for="FeedbackRecord.FeedbackType" class="control-label"></label>
                 <select asp-for="FeedbackRecord.FeedbackType" class="form-control">
+                    <option value="Website Bugs" selected disabled>Select a type</option>
                     <option value="Website Bugs">Website Bugs</option>
                     <option value="Suggestions for Improvements">Suggestions for Improvements</option>
                     <option value="Additional Feature Request">Additional Feature Request</option>
@@ -27,7 +28,7 @@
                 <span asp-validation-for="FeedbackRecord.FeedbackContent" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Submit" class="btn btn-primary" />
             </div>
         </form>
     </div>
