Add min and max length for feedback.

--- a/SSD-Alkolq/Areas/Identity/Pages/Account/Manage/WebsiteFeedback.cshtml
+++ b/SSD-Alkolq/Areas/Identity/Pages/Account/Manage/WebsiteFeedback.cshtml
@@ -24,8 +24,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="FeedbackRecord.FeedbackContent" class="control-label"></label>
-                <textarea asp-for="FeedbackRecord.FeedbackContent" class="form-control" rows="10" cols="30" required></textarea>
-                <span asp-validation-for="FeedbackRecord.FeedbackContent" class="text-danger"></span>
+                <textarea asp-for="FeedbackRecord.FeedbackContent" class="form-control" rows="10" cols="30"></textarea>
+                <span asp-validation-for="FeedbackRecord.FeedbackContent" class="text-danger pr-5"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Submit" class="btn btn-primary" />
