Feedback show store UserID instead of Username.

--- a/SSD-Alkolq/Pages/Feedback/Create.cshtml
+++ b/SSD-Alkolq/Pages/Feedback/Create.cshtml
@@ -14,9 +14,9 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="FeedbackRecord.Username" class="control-label"></label>
-                <input asp-for="FeedbackRecord.Username" class="form-control" />
-                <span asp-validation-for="FeedbackRecord.Username" class="text-danger"></span>
+                <label asp-for="FeedbackRecord.UserID" class="control-label"></label>
+                <input asp-for="FeedbackRecord.UserID" class="form-control" />
+                <span asp-validation-for="FeedbackRecord.UserID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FeedbackRecord.FeedbackType" class="control-label"></label>
