--- a/SSD-Alkolq/Pages/Feedback/Delete.cshtml
+++ b/SSD-Alkolq/Pages/Feedback/Delete.cshtml
@@ -13,10 +13,10 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FeedbackRecord.Username)
+            @Html.DisplayNameFor(model => model.FeedbackRecord.UserID)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FeedbackRecord.Username)
+            @Html.DisplayFor(model => model.FeedbackRecord.UserID)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FeedbackRecord.FeedbackType)
@@ -39,7 +39,7 @@
     </dl>
     
     <form method="post">
-        <input type="hidden" asp-for="FeedbackRecord.Feedback_ID" />
+        <input type="hidden" asp-for="FeedbackRecord.ID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
