--- a/SSD-Alkolq/Pages/Feedback/Details.cshtml
+++ b/SSD-Alkolq/Pages/Feedback/Details.cshtml
@@ -12,10 +12,10 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FeedbackRecord.Username)
+            @Html.DisplayNameFor(model => model.FeedbackRecord.UserID)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FeedbackRecord.Username)
+            @Html.DisplayFor(model => model.FeedbackRecord.UserID)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FeedbackRecord.FeedbackType)
@@ -38,6 +38,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.FeedbackRecord.Feedback_ID">Edit</a> |
+    <a asp-page="./Edit" asp-route-id="@Model.FeedbackRecord.ID">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
