Add basic credits page.

--- a/SSD-Alkolq/Pages/Shared/_Layout.cshtml
+++ b/SSD-Alkolq/Pages/Shared/_Layout.cshtml
@@ -58,7 +58,14 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - SSD_Alkolq - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            <div class="float-right">
+                <a asp-area="" asp-page="/Privacy">Privacy</a>
+                &nbsp;|&nbsp;
+                <a asp-area="" asp-page="/Credits">Credits</a>
+            </div>
+            <p>
+                &copy; 2021 - Alkolq
+            </p>
         </div>
     </footer>
 
