Add the luck of google.

--- a/SSD-Alkolq/Pages/Credits.cshtml
+++ b/SSD-Alkolq/Pages/Credits.cshtml
@@ -14,4 +14,4 @@
     <li>Lynn Shaan</li>
 </ul>
 
-<p>Special thanks to Mr Saifu, our teacher who guide us through how to copy razor pages code from a word document.</p>
+<p>Special thanks to Mr Saifu, our teacher who guide us through how to copy razor pages code from a word document (luck google is a thing now).</p>
