--- a/SSD-Alkolq/Pages/Privacy.cshtml
+++ b/SSD-Alkolq/Pages/Privacy.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<h1 class="mb-3 text-center">@ViewData["Title"]</h1>
+
+<p class="text-center">This project is made for a school assignment and we do not actually sell alcohol.</p>
