--- a/SSD-Alkolq/Pages/AlcoholProducts/Details.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholProducts/Details.cshtml
@@ -70,3 +70,59 @@
     <a asp-page="./Edit" asp-route-id="@Model.AlcoholProduct.ID">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
+
+
+<div>
+    <h4>Product Rating</h4>
+    <hr />
+
+    <div class="row">
+        <div class="col-md-8">
+            <form method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="ProductRating.RatingStar" class="control-label"></label>
+                    <select asp-for="ProductRating.RatingStar" class="form-control">
+                        <option value="1" selected disabled>1 Star</option>
+                        <option value="2">2 Star</option>
+                        <option value="3">3 Star</option>
+                        <option value="4">4 Star</option>
+                        <option value="5">5 Star</option>
+                    </select>
+                    <span asp-validation-for="ProductRating.RatingStar" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ProductRating.RatingContent" class="control-label"></label>
+                    <textarea asp-for="ProductRating.RatingContent" class="form-control" rows="10" cols="30"></textarea>
+                    <span asp-validation-for="ProductRating.RatingContent" class="text-danger pr-5"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Submit" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ProductRating.UserID)
+            @Html.DisplayNameFor(model => model.ProductRating.RatingStar)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ProductRating.UserID)
+            @Html.DisplayFor(model => model.ProductRating.RatingStar)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ProductRating.RatingContent)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ProductRating.RatingContent)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ProductRating.DateTimeStamp)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ProductRating.DateTimeStamp)
+        </dd>
+    </dl>
+</div>
