--- a/SSD-Alkolq/Pages/Rating/Delete.cshtml
+++ b/SSD-Alkolq/Pages/Rating/Delete.cshtml
@@ -10,31 +10,43 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>ProductType</h4>
+    <h4>ProductRating</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductType.Name)
+            @Html.DisplayNameFor(model => model.ProductRating.UserID)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ProductType.Name)
+            @Html.DisplayFor(model => model.ProductRating.UserID)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductType.Description)
+            @Html.DisplayNameFor(model => model.ProductRating.DateTimeStamp)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ProductType.Description)
+            @Html.DisplayFor(model => model.ProductRating.DateTimeStamp)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductType.ImageName)
+            @Html.DisplayNameFor(model => model.ProductRating.RatingContent)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ProductType.ImageName)
+            @Html.DisplayFor(model => model.ProductRating.RatingContent)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ProductRating.RatingStar)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ProductRating.RatingStar)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ProductRating.AlcoholProductID)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ProductRating.AlcoholProductID)
         </dd>
     </dl>
     
     <form method="post">
-        <input type="hidden" asp-for="ProductType.ID" />
+        <input type="hidden" asp-for="ProductRating.ID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
