--- a/SSD-Alkolq/Pages/Rating/Details.cshtml
+++ b/SSD-Alkolq/Pages/Rating/Details.cshtml
@@ -9,30 +9,42 @@
 <h1>Details</h1>
 
 <div>
-    <h4>ProductType</h4>
+    <h4>ProductRating</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductType.Name)
+            @Html.DisplayNameFor(model => model.ProductRating.UserID)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ProductType.Name)
+            @Html.DisplayFor(model => model.ProductRating.UserID)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductType.Description)
+            @Html.DisplayNameFor(model => model.ProductRating.DateTimeStamp)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ProductType.Description)
+            @Html.DisplayFor(model => model.ProductRating.DateTimeStamp)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductType.ImageName)
+            @Html.DisplayNameFor(model => model.ProductRating.RatingContent)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ProductType.ImageName)
+            @Html.DisplayFor(model => model.ProductRating.RatingContent)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ProductRating.RatingStar)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ProductRating.RatingStar)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ProductRating.AlcoholProductID)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ProductRating.AlcoholProductID)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.ProductType.ID">Edit</a> |
+    <a asp-page="./Edit" asp-route-id="@Model.ProductRating.ID">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
