--- a/SSD-Alkolq/Pages/Rating/Edit.cshtml
+++ b/SSD-Alkolq/Pages/Rating/Edit.cshtml
@@ -8,27 +8,42 @@
 
 <h1>Edit</h1>
 
-<h4>ProductType</h4>
+<h4>ProductRating</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ProductType.ID" />
+            <input type="hidden" asp-for="ProductRating.ID" />
             <div class="form-group">
-                <label asp-for="ProductType.Name" class="control-label"></label>
-                <input asp-for="ProductType.Name" class="form-control" />
-                <span asp-validation-for="ProductType.Name" class="text-danger"></span>
+                <label asp-for="ProductRating.UserID" class="control-label"></label>
+                <input asp-for="ProductRating.UserID" class="form-control" />
+                <span asp-validation-for="ProductRating.UserID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProductType.Description" class="control-label"></label>
-                <input asp-for="ProductType.Description" class="form-control" />
-                <span asp-validation-for="ProductType.Description" class="text-danger"></span>
+                <label asp-for="ProductRating.DateTimeStamp" class="control-label"></label>
+                <input asp-for="ProductRating.DateTimeStamp" class="form-control" />
+                <span asp-validation-for="ProductRating.DateTimeStamp" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProductType.ImageName" class="control-label"></label>
-                <input asp-for="ProductType.ImageName" class="form-control" />
-                <span asp-validation-for="ProductType.ImageName" class="text-danger"></span>
+                <label asp-for="ProductRating.RatingContent" class="control-label"></label>
+                <input asp-for="ProductRating.RatingContent" class="form-control" />
+                <span asp-validation-for="ProductRating.RatingContent" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ProductRating.RatingStar" class="control-label"></label>
+                <select asp-for="ProductRating.RatingStar" class="form-control">
+                    <option value="1" selected disabled>1 Star</option>
+                    <option value="2">2 Star</option>
+                    <option value="3">3 Star</option>
+                    <option value="4">4 Star</option>
+                    <option value="5">5 Star</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label asp-for="ProductRating.AlcoholProductID" class="control-label"></label>
+                <input asp-for="ProductRating.AlcoholProductID" class="form-control" />
+                <span asp-validation-for="ProductRating.AlcoholProductID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
