Fix default selection and success routing.

--- a/SSD-Alkolq/Pages/AlcoholProducts/Details.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholProducts/Details.cshtml
@@ -84,7 +84,8 @@
                 <div class="form-group">
                     <label asp-for="ProductRating.RatingStar" class="control-label"></label>
                     <select asp-for="ProductRating.RatingStar" class="form-control">
-                        <option value="1" selected disabled>1 Star</option>
+                        <option value="0" selected disabled>Select the rating</option>
+                        <option value="1">1 Star</option>
                         <option value="2">2 Star</option>
                         <option value="3">3 Star</option>
                         <option value="4">4 Star</option>
