Update Credits page

--- a/SSD-Alkolq/Pages/Credits.cshtml
+++ b/SSD-Alkolq/Pages/Credits.cshtml
@@ -17,32 +17,32 @@
         <img src="~/images/contributors/ben.webp" class="card-img-top m-3" alt="Benedict Woo">
         <div class="card-body">
             <h5 class="card-title">Benedict Woo</h5>
-            <p class="card-text">Alien Force</p>
+            <p class="card-text">Summoning him is like summoning bloody mary</p>
         </div>
     </div>
     <div class="card">
         <img src="~/images/contributors/elsa.png" class="card-img-top m-3" alt="Benedict Woo">
         <div class="card-body">
             <h5 class="card-title">Elsa Lee</h5>
-            <p class="card-text">Frozen</p>
+            <p class="card-text">Has not actually watched Frozen</p>
         </div>
     </div>
     <div class="card">
         <img src="~/images/contributors/lynn.png" class="card-img-top m-3" alt="Benedict Woo">
         <div class="card-body">
             <h5 class="card-title">Lynn Shaan</h5>
-            <p class="card-text">Taller Than Ever</p>
+            <p class="card-text">Does not have a surname</p>
         </div>
     </div>
     <div class="card">
         <img src="~/images/contributors/cody.webp" class="card-img-top m-3" alt="Benedict Woo">
         <div class="card-body">
             <h5 class="card-title">Cody Jeow</h5>
-            <p class="card-text">Aging Well</p>
+            <p class="card-text">Aged like a fine wine</p>
         </div>
     </div>
 </div>
 
 <p class="text-center m-5">
-    Special thanks to Mr Saifu, our teacher who guide us through how to copy razor pages code from a word document (luck google is a thing now).
+    Special thanks to Mr Saifu, our teacher who guide us through how to copy razor pages code from a word document (luckily google is a thing now).
 </p>
