Add more margin after grid.

--- a/SSD-Alkolq/Pages/Index.cshtml
+++ b/SSD-Alkolq/Pages/Index.cshtml
@@ -26,7 +26,7 @@
         </div>
     </section>
     <div></div>
-    <section id="types">
+    <section id="types" class="mb-5">
         <div class="row">
             @foreach (var type in Model.ProductTypes)
             {
