--- a/SSD-Alkolq/Pages/AuditLogs/Edit.cshtml
+++ b/SSD-Alkolq/Pages/AuditLogs/Edit.cshtml
@@ -20,22 +20,22 @@
                 <span asp-validation-for="AuditRecord.Performer" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AuditRecord.Performer" class="control-label"></label>
+                <label asp-for="AuditRecord.Action" class="control-label"></label>
                 <input asp-for="AuditRecord.Action" class="form-control" />
                 <span asp-validation-for="AuditRecord.Action" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AuditRecord.Action" class="control-label"></label>
+                <label asp-for="AuditRecord.DateTimeStamp" class="control-label"></label>
                 <input asp-for="AuditRecord.DateTimeStamp" class="form-control" />
                 <span asp-validation-for="AuditRecord.DateTimeStamp" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AuditRecord.DateTimeStamp" class="control-label"></label>
+                <label asp-for="AuditRecord.AffectedData" class="control-label"></label>
                 <input asp-for="AuditRecord.AffectedData" class="form-control" />
                 <span asp-validation-for="AuditRecord.AffectedData" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AuditRecord.AffectedData" class="control-label"></label>
+                <label asp-for="AuditRecord.AffectedDataID" class="control-label"></label>
                 <input asp-for="AuditRecord.AffectedDataID" class="form-control" />
                 <span asp-validation-for="AuditRecord.AffectedDataID" class="text-danger"></span>
             </div>
