Fixed missing IP Address

--- a/SSD-Alkolq/Pages/AuditLogs/Details.cshtml
+++ b/SSD-Alkolq/Pages/AuditLogs/Details.cshtml
@@ -18,6 +18,12 @@
             @Html.DisplayFor(model => model.AuditRecord.Performer)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.AuditRecord.IPAddress)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.AuditRecord.IPAddress)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.AuditRecord.Action)
         </dt>
         <dd class="col-sm-10">
